tests/haste_node_package_and_file/haste_node_package_and_file.exp
Error ----------------------------------------------------------------------------------------------------- test.js:15:2

Cannot cast `pkg` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:15:2
   15| (pkg: empty); // error
        ^^^

References:
   package/index.js:1:16
    1| export default "string";
                      ^^^^^^^^ [1]
   test.js:15:7
   15| (pkg: empty); // error
             ^^^^^ [2]



Found 1 error
